Minor fixes to README and AUTHORS files

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-# Special Thanks to
+## Special Thanks to
 
 - Stefonarch (Standreas) and the translation team at <https://translate.lxqt-project.org/>.
 - LXQt Developers, for all their software, here using their [build tools].
